--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ body a {
 
 .card-2 a {
 	color: #FFB72E;
+	padding: 0px 8px 0px 8px;
 }
 
 .spacer-5 {
@@ -127,4 +128,8 @@ body a {
   border-style: none;
   height: 135px;
   top: 0;
+}
+
+.card-2 a:hover {
+	color: white;
 }
